--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Vijay A"
-  avatar           : "profile.png"
+  avatar           : "VA_profile.png"
   bio              : "PhD Research Scholar at EE, IIT Bombay"
   location         : "Mumbai"
   employer         :
